--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-	
  
 	<title>Video Hosting cfor business Wistia </title>
 	<link rel = "stylesheet" type = "text/css" href = "index.css" />
@@ -12,27 +10,32 @@
 
 </head>
 <body>
-	<div id="header">
- <header>
 	
-		<a href="#"><svg class ='hello'height="30" preserveAspectRatio="xMinYMid slice" style="height:30px;width:31.5px" viewBox="0 0 486 128" class="jsx-1124597497 WistiaLogo"><g opacity="1" transform="scale(1.55) translate(-20 -22)" class="jsx-1124597497 WistiaLogo--swoopies"><path d=" M104.5,43.8c1.8-10.8-4.3-13.8-4.3-13.8s0.3,8.8-15.9,10.7c-14.4,1.7 -62.5,0.4-62.5,0.4s0,0,15.5,17.8c4.2,4.8,6.4,5.4,11.1,5.7c4.7,0.3 15.1,0.2,22.2-0.3c7.7-0.6,18.7-3.1,26.1-8.9C100.4,52.4,103.7,48.3 104.5,43.8z " fill="#3EA9F5" class="jsx-1124597497"></path><path d=" M105.5,55c0,0-1.9,3.9-11.6,10c-4.1,2.6-12.7,5.4-23.7,6.4c-6,0.6-16.9 0.1-21.6,0.1c-4.7,0-6.9,1-11.1,5.8 C21.7,94.9,21.7,94.9,21.7,94.9s 5.4,0,9.5,0c4.1,0,29.7,1.5,41-1.6C109.1,83.1,105.5,55,105.5,55z " fill="#3EA9F5" class="jsx-1124597497"></path></g><g fill="#3EA9F5" opacity="0" transform="translate(110 0)" class="jsx-1124597497 WistiaLogo--text"><path d=" M210,29.8h9.4l-26.5,65.8h-2.1l-21.4-53.3l-21.6,53.3h-2l-26.4-65.8h 9.4l18,45.1L165,29.8h8.9l18.3,45.1L210,29.8z " transform="translate(169 63) scale(0 1) translate(-169 -63)" class="jsx-1124597497"></path><path d="M231.5,29.8h9.4v65.5h-9.4V29.8z" transform="translate(236 63) scale(0 1) translate(-236 -63)" class="jsx-1124597497"></path><path d=" M276.4,67.8l-7.1-4.3c-4.5-2.7-7.6-5.4-9.5-8.1c-1.9-2.6-2.8-5.7-2.8 -9.1c0-5.2,1.8-9.3,5.4-12.6c3.6-3.2,8.2-4.8,13.9-4.8c5.5,0,10.5,1.5 15,4.6v10.6c-4.7-4.5-9.8-6.8-15.2-6.8c-3.1,0-5.6,0.7-7.5,2.1c-2,1.4 -3,3.2-3,5.4c0,2,0.7,3.8,2.2,5.5c1.5,1.7,3.8,3.5,7,5.4l7.2,4.2c8,4.8 12,10.8,12,18.2c0,5.2-1.8,9.5-5.3,12.8c-3.5,3.3-8.1,4.9-13.7,4.9c -6.5,0-12.4-2-17.7-6V78.1c5.1,6.4,10.9,9.6,17.6,9.6c2.9,0,5.4-0.8 7.3-2.5s2.9-3.7,2.9-6.1C285.1,75.2,282.2,71.4,276.4,67.8z " transform="translate(276 62) scale(0 1) translate(-276 -62)" class="jsx-1124597497"></path><path d="M303.4,29.7h54.7V38h-22.8v57.2h-9.4V38h-22.5V29.7z" transform="translate(331 62) scale(0 1) translate(-331 -62)" class="jsx-1124597497"></path><path d="M371.9,29.8h9.4v65.5h-9.4V29.8z" transform="translate(377 63) scale(0 1) translate(-377 -63)" class="jsx-1124597497"></path><path d=" M421.5,29.4h6.6l29.4,65.9h-9.6l-8.7-19.4h-27.9L403,95.3h-9.6L421.5 29.4zM435.3,67.5l-10.6-23.7l-9.8,23.7H435.3z " transform="translate(425 62) scale(0 1) translate(-425 -62)" class="jsx-1124597497"></path></g></svg>
+ <header>
 		
+			<svg class ='hello'height="30" preserveAspectRatio="xMinYMid slice" style="height:30px;width:31.5px" viewBox="0 0 486 128" class="jsx-1124597497 WistiaLogo"><g opacity="1" transform="scale(1.55) translate(-20 -22)" class="jsx-1124597497 WistiaLogo--swoopies"><path d=" M104.5,43.8c1.8-10.8-4.3-13.8-4.3-13.8s0.3,8.8-15.9,10.7c-14.4,1.7 -62.5,0.4-62.5,0.4s0,0,15.5,17.8c4.2,4.8,6.4,5.4,11.1,5.7c4.7,0.3 15.1,0.2,22.2-0.3c7.7-0.6,18.7-3.1,26.1-8.9C100.4,52.4,103.7,48.3 104.5,43.8z " fill="#3EA9F5" class="jsx-1124597497"></path><path d=" M105.5,55c0,0-1.9,3.9-11.6,10c-4.1,2.6-12.7,5.4-23.7,6.4c-6,0.6-16.9 0.1-21.6,0.1c-4.7,0-6.9,1-11.1,5.8 C21.7,94.9,21.7,94.9,21.7,94.9s 5.4,0,9.5,0c4.1,0,29.7,1.5,41-1.6C109.1,83.1,105.5,55,105.5,55z " fill="#3EA9F5" class="jsx-1124597497"></path></g><g fill="#3EA9F5" opacity="0" transform="translate(110 0)" class="jsx-1124597497 WistiaLogo--text"><path d=" M210,29.8h9.4l-26.5,65.8h-2.1l-21.4-53.3l-21.6,53.3h-2l-26.4-65.8h 9.4l18,45.1L165,29.8h8.9l18.3,45.1L210,29.8z " transform="translate(169 63) scale(0 1) translate(-169 -63)" class="jsx-1124597497"></path><path d="M231.5,29.8h9.4v65.5h-9.4V29.8z" transform="translate(236 63) scale(0 1) translate(-236 -63)" class="jsx-1124597497"></path><path d=" M276.4,67.8l-7.1-4.3c-4.5-2.7-7.6-5.4-9.5-8.1c-1.9-2.6-2.8-5.7-2.8 -9.1c0-5.2,1.8-9.3,5.4-12.6c3.6-3.2,8.2-4.8,13.9-4.8c5.5,0,10.5,1.5 15,4.6v10.6c-4.7-4.5-9.8-6.8-15.2-6.8c-3.1,0-5.6,0.7-7.5,2.1c-2,1.4 -3,3.2-3,5.4c0,2,0.7,3.8,2.2,5.5c1.5,1.7,3.8,3.5,7,5.4l7.2,4.2c8,4.8 12,10.8,12,18.2c0,5.2-1.8,9.5-5.3,12.8c-3.5,3.3-8.1,4.9-13.7,4.9c -6.5,0-12.4-2-17.7-6V78.1c5.1,6.4,10.9,9.6,17.6,9.6c2.9,0,5.4-0.8 7.3-2.5s2.9-3.7,2.9-6.1C285.1,75.2,282.2,71.4,276.4,67.8z " transform="translate(276 62) scale(0 1) translate(-276 -62)" class="jsx-1124597497"></path><path d="M303.4,29.7h54.7V38h-22.8v57.2h-9.4V38h-22.5V29.7z" transform="translate(331 62) scale(0 1) translate(-331 -62)" class="jsx-1124597497"></path><path d="M371.9,29.8h9.4v65.5h-9.4V29.8z" transform="translate(377 63) scale(0 1) translate(-377 -63)" class="jsx-1124597497"></path><path d=" M421.5,29.4h6.6l29.4,65.9h-9.6l-8.7-19.4h-27.9L403,95.3h-9.6L421.5 29.4zM435.3,67.5l-10.6-23.7l-9.8,23.7H435.3z " transform="translate(425 62) scale(0 1) translate(-425 -62)" class="jsx-1124597497"></path></g></svg>
+
 
 	
-	  <a href="#" id="first"> Wistia for Marketing </a>
-	  <a href="#">Soapbox</a>
-	  <a href="#">Learning Center</a>
-	   <a href="#">Video Series</a>
+	  <ul id="ul1"> 
+	  <li class='li1'> Wistia for Marketing </li>
+	  <li class='li1'>Soapbox</li>
+	  <li class='li1'>Learning Center</li>
+	  <li class='li1'>Video Series</li>
+	</ul>
 
 
 	<div id='buttons'>
 		<button id='button1'>Login</button>
 		<button id='button2'>Get Started</button>
 	</div>	
+
+
+
 	
  </header> 
-<!--  first hover  -->
- <div class="drop-content">
+
+ <div id='li2'>
 
 		<div>
 <!-- 			<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSedQ02PoR8cFmC3SN2PP77oUUlcLoCYLs_g_iy3ozUWGFu3jlo&s" >
@@ -72,13 +75,9 @@
 		</div>
 		
 
-
-	</div>
-
 </div>
-
-
-
+<!--  first hover  -->
+ 
 
   <!--  second hover  -->
 
@@ -191,7 +190,7 @@
 <hr>
 	<div id="div2">
 
-		<div >
+		<div>
 <!-- 			<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSedQ02PoR8cFmC3SN2PP77oUUlcLoCYLs_g_iy3ozUWGFu3jlo&s" >
 
  -->	
